<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/start">

        <Preference
            app:key="start_period_1"
            app:title="@string/period_1" />

        <Preference
            app:key="start_period_2"
            app:title="@string/period_2" />

        <Preference
            app:key="start_period_3"
            app:title="@string/period_3" />

        <Preference
            app:key="start_period_4"
            app:title="@string/period_4" />

        <Preference
            app:key="start_period_5"
            app:title="@string/period_5" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            app:key="class_time"
            app:title="@string/class_time_title" />

    </PreferenceCategory>

</PreferenceScreen>