<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_update_timetable"
        android:icon="@drawable/outline_sync_24"
        android:title="@string/update_timetable"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_settings"
        android:icon="@drawable/outline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_all_subjects"
        android:icon="@drawable/outline_delete_sweep_24"
        android:title="@string/delete_all_subjects"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_licenses"
        android:title="@string/licenses"
        app:showAsAction="never" />
</menu>