<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/home_menu" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_home">

            <Button
                android:id="@+id/button_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2021"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_quarter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1Q"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/day_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_term">

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/text_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Monday" />

            <TextView
                android:id="@+id/text_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Tuesday" />

            <TextView
                android:id="@+id/text_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Wednesday" />

            <TextView
                android:id="@+id/text_thusday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Thursday" />

            <TextView
                android:id="@+id/text_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/Friday" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_of_week">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/period"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/text_period1"
                        android:layout_width="16dp"
                        android:layout_height="104dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/one" />

                    <TextView
                        android:id="@+id/text_period2"
                        android:layout_width="16dp"
                        android:layout_height="104dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/two" />

                    <TextView
                        android:id="@+id/text_period3"
                        android:layout_width="16dp"
                        android:layout_height="104dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/three" />

                    <TextView
                        android:id="@+id/text_period4"
                        android:layout_width="16dp"
                        android:layout_height="104dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/four" />

                    <TextView
                        android:id="@+id/text_period5"
                        android:layout_width="16dp"
                        android:layout_height="104dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/five" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/timetable"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/period"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <!--
        adUnitId(Test): ca-app-pub-3940256099942544/6300978111
        -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/bottom_adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.fragment.app.FragmentContainerView>

</FrameLayout>